# NexusRAG

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  vercel.json
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  heartbeat.yml  warmup.yml
api/: index.py
docs/: capacity-model.md  notification-receiver-contract.md
docs/compliance/: controls-catalog.md  evidence-bundles.md
docs/runbooks/: alerting-triage.md  audit-evidence-export.md  authz-deny-debugging.md  authz-policy-rollout.md  autoscaling-operations.md  breaker-playbook.md  capacity-planning-playbook.md  chargeback-reconciliation.md  compliance-control-failure-response.md  compliance-scheduling-and-retention.md  compliance-snapshot.md  cost-cap-incident-response.md  deploy-preflight.md  document-permission-operations.md  dr-backup-restore.md  dsar-handling.md  encrypted-artifact-access.md  evidence-bundle-verification.md  evidence-bundles.md  failover-execution.md  failover-rollback.md  ga-readiness.md  github-push-troubleshooting.md  identity-provider-rotation.md  incident-management.md  incident-response.md  key-compromise-response.md  key-rotation-execution.md  key-rotation-for-backups.md  key-rotation.md  kms-outage-procedure.md  legal-hold-procedure.md  load-shedding-playbook.md  notification-delivery.md  notification-receiver-contract.md  operability-evaluator.md  perf-regression-triage.md  pricing-catalog-operations.md  restore-drill-checklist.md  retention-and-anonymization.md  (+8 more)
examples/benchmark-v1/: README.md  cases.jsonl  corpus.jsonl
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  architecture.ts  changelog.ts  feature-matrix.ts  project.ts  sse.ts  utils.ts
nexusrag/agent/: graph.py  prompts.py  tools.py
nexusrag/apps/api/: deps.py  errors.py  main.py  openapi.py  rate_limit.py  response.py
nexusrag/apps/notify_receiver/: __init__.py  app.py
nexusrag/benchmark/: __init__.py  runner.py  scoring.py
nexusrag/core/: config.py  errors.py  logging.py
nexusrag/domain/: events.py  models.py  state.py
nexusrag/ingestion/: chunking.py  embeddings.py  loaders.py
nexusrag/persistence/: db.py  guards.py
nexusrag/persistence/alembic/: env.py
nexusrag/persistence/repos/: audit.py  authz.py  benchmark.py  checkpoints.py  chunks.py  corpora.py  documents.py  messages.py  query_log.py  sessions.py
nexusrag/providers/llm/: base.py  factory.py  fake.py  gemini_vertex.py
nexusrag/providers/retrieval/: base.py  bedrock_kb.py  config.py  local_pgvector.py  router.py  vertex_ai.py
nexusrag/providers/tts/: base.py  (+3 more)
nexusrag/services/: audit.py  backup.py  billing_webhook.py  entitlements.py  failover.py  governance.py  idempotency.py  ingestion.py  maintenance.py  policy_engine.py  prometheus_metrics.py  quota.py  resilience.py  rollouts.py  self_serve.py  telemetry.py  ui_dashboard.py  ui_query.py  usage_dashboard.py
nexusrag/tests/: conftest.py
nexusrag/workers/: __init__.py  ingestion_worker.py  notification_worker.py
scripts/: __init__.py  backup_create.py  backup_prune.py  backup_restore.py  capacity_estimate.py  cleanup_ui_actions.py  compliance_generate_bundle.py  compliance_snapshot.py  create_api_key.py  ga_checklist.py  generate_sdk.py  git_network_diag.sh  list_api_keys.py  notification_worker.py  notify_receiver.py  operability_worker.py  preflight.py  provider_smoke.py  prune_audit.py  prune_idempotency.py  prune_usage_counters.py  revoke_api_key.py  rotate_api_key.py  rotate_platform_key.py  security_secrets_scan.py  seed_demo.py
sdk/: openapi.json
sdk/frontend/: README.md  package-lock.json  package.json  tsconfig.json
sdk/python/: README.md  client.py
sdk/typescript/: README.md  client.ts
tests/perf/: assert_perf_gates.py  report_summary.py
(+234 files in other folders)
