[project]
name = "nexusrag"
version = "0.1.1"
description = "NexusRAG: a multi-cloud, stateful, streaming RAG agent platform"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pgvector>=0.2.5",
  "langgraph>=0.0.59",
  "google-cloud-aiplatform>=1.50.0",
  "python-dotenv>=1.0",
  "orjson>=3.9",
]

[project.optional-dependencies]

test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "anyio>=4.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.alembic]
script_location = "nexusrag/persistence/alembic"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexusrag*"]
