[project]
name = "nexusrag"
version = "2.9.4"
description = "NexusRAG: a multi-cloud, stateful, streaming RAG agent platform"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # fastapi 0.136.3 excluded: OSV MAL-2026-4750 (Amazon Inspector) flags it for
    # adding an undocumented 'fastar' dep to the [standard] extra. We don't install
    # that extra, but avoid the flagged release outright; re-allows 0.136.4+.
    "fastapi>=0.110,!=0.136.3",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pgvector>=0.2.5",
  "python-dotenv>=1.0",
  "orjson>=3.9",
  "arq>=0.26.0",
  "cryptography>=42.0",
  "httpx>=0.27",
  "PyJWT>=2.8",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]

agent = [
  "langgraph>=0.0.59",
]

vertex = [
  "google-cloud-aiplatform>=1.50.0",
  "google-cloud-discoveryengine>=0.11.0",
]

aws = [
  "boto3>=1.34.0",
]

test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "anyio>=4.2",
]

dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "anyio>=4.2",
  "pip-audit>=2.7.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "wheel>=0.46.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = [
  "E501",  # line length — formatter handles this
  "B008",  # FastAPI requires Depends(...) / Body(...) in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"nexusrag/tests/**" = ["B017"]  # pytest.raises(Exception) is acceptable in negative tests

[tool.alembic]
script_location = "nexusrag/persistence/alembic"

[build-system]
requires = ["setuptools>=68", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexusrag*"]
